--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
-    "start": "nodemon server.js"
+    "start": "nodemon --exec babel-node server.js"
   },
   "keywords": [
     "Express",
@@ -15,6 +15,8 @@
   "author": "Abhinav K. Gurung",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "consola": "^2.15.0",
@@ -22,6 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-session": "^1.17.1",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7"
   },
